--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "puppeteer-lambda-starter-kit",
+  "name": "puppeteer-fc-starter-kit",
   "version": "1.1.2",
-  "description": "Starter Kit for running Headless-Chrome by Puppeteer on Aliyun Lambda",
+  "description": "Starter Kit for running Headless-Chrome by Puppeteer on Aliyun Function computing",
   "scripts": {
     "package": "npm run package-prepare && cp chrome/headless_shell.tar.gz dist && cd dist && zip -rq ../package.zip .",
     "package-nochrome": "npm run package-prepare && cd dist && zip -rq ../package.zip .",
